FE: Fix broken flexbox on iOS

--- a/frontend/src/ui/order_tile/order_tile.module.css
+++ b/frontend/src/ui/order_tile/order_tile.module.css
@@ -8,15 +8,11 @@
     color: #333;
 }
 
-.imageContainer {
-    display: flex;
-    flex-shrink: 1;
-}
-
 .image {
     object-fit: cover;
     width: 100px;
     min-height: 100px;
+    height: 100%;
 }
 
 .infoContainer {
